--- a/downloads/index.html
+++ b/downloads/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Downloads</title>
     <meta name="description" content="Emulator software for the Buchla 700 on Linux, OS X, and Windows.">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/700emulator.org_eleventy/main.css">
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/700emulator.org_eleventy/main.js"></script>
     <link rel="alternate" href="." type="application/atom+xml" title="The Buchla 700 Emulation Project">
     <link rel="alternate" href="." type="application/json" title="The Buchla 700 Emulation Project">
   </head>
@@ -155,6 +155,6 @@
 
 
 
-    <!-- Current page: /downloads/ -->
+    <!-- Current page: /700emulator.org_eleventy/downloads/ -->
   </body>
 </html>
