--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Buchla 700 Emulation Project</title>
     <meta name="description" content="Emulator software for the Buchla 700 on Linux, OS X, and Windows.">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/700emulator.org_eleventy/main.css">
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/700emulator.org_eleventy/main.js"></script>
     <link rel="alternate" href="." type="application/atom+xml" title="The Buchla 700 Emulation Project">
     <link rel="alternate" href="." type="application/json" title="The Buchla 700 Emulation Project">
   </head>
@@ -15,13 +15,13 @@
     <script class="mouseFollowerJson" type="application/json"></script>
     <main class="tmpl-home">
       <h1 id="content-not-found.">Content not found. <a class="direct-link" href="#content-not-found.">#</a></h1>
-<p>Go <a href="/">home</a>.</p>
+<p>Go <a href="/700emulator.org_eleventy/">home</a>.</p>
 
 
     </main>
 
 
 
-    <!-- Current page: /404.html -->
+    <!-- Current page: /700emulator.org_eleventy/404.html -->
   </body>
 </html>
