--- a/404.html
+++ b/404.html
@@ -6,21 +6,20 @@
     <title>The Buchla 700 Emulation Project</title>
     <meta name="description" content="Emulator software for the Buchla 700 on Linux, OS X, and Windows.">
     <link rel="stylesheet" href="/700emulator.org_eleventy/main.css">
-
     <script type="module" src="/700emulator.org_eleventy/main.js"></script>
     <link rel="alternate" href="." type="application/atom+xml" title="The Buchla 700 Emulation Project">
     <link rel="alternate" href="." type="application/json" title="The Buchla 700 Emulation Project">
   </head>
   <body>
-    <script class="mouseFollowerJson" type="application/json"></script>
+    <script class="mouseFollowerJson" type="application/json">
+      
+    </script>
     <main class="tmpl-home">
       <h1 id="content-not-found.">Content not found. <a class="direct-link" href="#content-not-found.">#</a></h1>
 <p>Go <a href="/700emulator.org_eleventy/">home</a>.</p>
 
 
     </main>
-
-
 
     <!-- Current page: /700emulator.org_eleventy/404.html -->
   </body>
