--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>The Buchla 700 Emulation Project</title>
     <meta name="description" content="Emulator software for the Buchla 700 on Linux, OS X, and Windows.">
     <link rel="stylesheet" href="/700emulator.org_eleventy/main.css">
-
     <script type="module" src="/700emulator.org_eleventy/main.js"></script>
     <link rel="alternate" href="." type="application/atom+xml" title="The Buchla 700 Emulation Project">
     <link rel="alternate" href="." type="application/json" title="The Buchla 700 Emulation Project">
   </head>
   <body>
-    <script class="mouseFollowerJson" type="application/json">["Welcome to the page of the Buchla 700 emulator.","It mimics the operating system of the 700.","This is the main menu. Click on one of items to get more info."]</script>
+    <script class="mouseFollowerJson" type="application/json">
+      ["Welcome to the page of the Buchla 700 emulator.","It mimics the operating system of the 700.","This is the main menu. Click on one of items to get more info."]
+    </script>
     <main class="tmpl-home">
       
 <div class="center borderOuter">
@@ -45,8 +46,6 @@
 </div>
 
     </main>
-
-
 
     <!-- Current page: /700emulator.org_eleventy/ -->
   </body>
