--- a/downloads/index.html
+++ b/downloads/index.html
@@ -6,13 +6,14 @@
     <title>Downloads</title>
     <meta name="description" content="Emulator software for the Buchla 700 on Linux, OS X, and Windows.">
     <link rel="stylesheet" href="/700emulator.org_eleventy/main.css">
-
     <script type="module" src="/700emulator.org_eleventy/main.js"></script>
     <link rel="alternate" href="." type="application/atom+xml" title="The Buchla 700 Emulation Project">
     <link rel="alternate" href="." type="application/json" title="The Buchla 700 Emulation Project">
   </head>
   <body>
-    <script class="mouseFollowerJson" type="application/json"></script>
+    <script class="mouseFollowerJson" type="application/json">
+      
+    </script>
     <main class="tmpl-base">
       
 <div class="center librarian">
@@ -152,8 +153,6 @@
     <div class="mouseFollower"></div>
 </div>
     </main>
-
-
 
     <!-- Current page: /700emulator.org_eleventy/downloads/ -->
   </body>
