--- a/instrument-designer/index.html
+++ b/instrument-designer/index.html
@@ -67,10 +67,14 @@
     </div>
   
 </div>
-  
+
   <div class="canvasWrapper border">
-    <canvas class="canvas" width="1080" height="680"/>
-  </div>
+  <canvas class="canvas" width="1080" height="680"/>
+</div>
+
+  <div class="border">
+  <canvas class="fmConfig" width="260" height="220"/>
+</div>
 </div>
     </main>
 
