--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Buchla 700 Emulation Project</title>
     <meta name="description" content="Emulator software for the Buchla 700 on Linux, OS X, and Windows.">
-    <link rel="stylesheet" href="/700emulator.org_eleventy/main.css">
-    <script type="module" src="/700emulator.org_eleventy/main.js"></script>
+    <link rel="stylesheet" href="/700emulator.org/main.css">
+    <script type="module" src="/700emulator.org/main.js"></script>
     <link rel="alternate" href="." type="application/atom+xml" title="The Buchla 700 Emulation Project">
     <link rel="alternate" href="." type="application/json" title="The Buchla 700 Emulation Project">
   </head>
@@ -47,6 +47,6 @@
 
     </main>
 
-    <!-- Current page: /700emulator.org_eleventy/ -->
+    <!-- Current page: /700emulator.org/ -->
   </body>
 </html>
